Added basic access control

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,10 +1,8 @@
-Sort out roles and accessibility
-
 Create edit Profile
 
 update myBlogs/profile page
 
-Integrate roles and admin control
+Integrate roles and admin control (create admin nav bar with options under basic nav bar)
 
 Comments
 
