added likes and force login to view more on blogs

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,9 +1,7 @@
-update myBlogs/profile page
-
-Integrate roles and admin control (create admin nav bar with options under basic nav bar)
-
 Comments
 
 Likes
 
 Style
+
+Create admin nav bar with options under basic nav bar
